@@ -1,5 +1,10 @@
 2003-11-08  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* libop/tests/Makefile.am:
+	* libop/tests/mangle_tests.c: new tests: sample filename mangling
+
+2003-11-08  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* module/x86/op_syscalls.c: fix build with 2.2 kernel
 
 2003-11-06  Philippe Elie  <phil.el@wanadoo.fr>
